[project]
name = "async_hello_agent"
version = "0.1.0"
description = "An async hello agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agents",
    "python-dotenv>=1.1.0",
    "chainlit>=0.7.700",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
